feat: transactions filters + pagination
